--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,39 @@ GOOGLE_CLIENT_SECRET="your-google-client-secret"
 # OpenAI
 OPENAI_API_KEY="your-openai-api-key"
 
+# Social Media APIs
+TWITTER_API_KEY="your-twitter-api-key"
+TWITTER_API_SECRET="your-twitter-api-secret"
+TWITTER_ACCESS_TOKEN="your-twitter-access-token"
+TWITTER_ACCESS_SECRET="your-twitter-access-secret"
+
+LINKEDIN_CLIENT_ID="your-linkedin-client-id"
+LINKEDIN_CLIENT_SECRET="your-linkedin-client-secret"
+
+INSTAGRAM_ACCESS_TOKEN="your-instagram-access-token"
+
+FACEBOOK_ACCESS_TOKEN="your-facebook-access-token"
+
+# Real Estate Data Providers
+ZILLOW_API_KEY="your-zillow-api-key"
+REALTOR_API_KEY="your-realtor-api-key"
+MLS_API_URL="your-mls-api-url"
+MLS_API_KEY="your-mls-api-key"
+REDFIN_API_KEY="your-redfin-api-key"
+TRULIA_API_KEY="your-trulia-api-key"
+PROPERTYSHARK_API_KEY="your-propertyshark-api-key"
+LOOPNET_API_KEY="your-loopnet-api-key"
+
+# File Storage
+GOOGLE_CLOUD_KEY_FILE="path-to-your-google-cloud-key-file.json"
+GOOGLE_CLOUD_BUCKET="your-google-cloud-bucket-name"
+
+# Redis for Rate Limiting
+UPSTASH_REDIS_URL="your-redis-url"
+UPSTASH_REDIS_TOKEN="your-redis-token"
+
+# OCR and Document Processing
+TESSERACT_DATA_PATH="path-to-tesseract-data"
+
 # Next.js
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
