Update environment configuration with new integrations

--- a/.env.example
+++ b/.env.example
@@ -9,39 +9,45 @@ GOOGLE_CLIENT_SECRET="your-google-client-secret"
 # OpenAI
 OPENAI_API_KEY="your-openai-api-key"
 
-# Social Media APIs
-TWITTER_API_KEY="your-twitter-api-key"
-TWITTER_API_SECRET="your-twitter-api-secret"
-TWITTER_ACCESS_TOKEN="your-twitter-access-token"
-TWITTER_ACCESS_SECRET="your-twitter-access-secret"
-
-LINKEDIN_CLIENT_ID="your-linkedin-client-id"
-LINKEDIN_CLIENT_SECRET="your-linkedin-client-secret"
-
-INSTAGRAM_ACCESS_TOKEN="your-instagram-access-token"
-
-FACEBOOK_ACCESS_TOKEN="your-facebook-access-token"
-
 # Real Estate Data Providers
 ZILLOW_API_KEY="your-zillow-api-key"
 REALTOR_API_KEY="your-realtor-api-key"
-MLS_API_URL="your-mls-api-url"
 MLS_API_KEY="your-mls-api-key"
 REDFIN_API_KEY="your-redfin-api-key"
 TRULIA_API_KEY="your-trulia-api-key"
 PROPERTYSHARK_API_KEY="your-propertyshark-api-key"
 LOOPNET_API_KEY="your-loopnet-api-key"
 
-# File Storage
-GOOGLE_CLOUD_KEY_FILE="path-to-your-google-cloud-key-file.json"
-GOOGLE_CLOUD_BUCKET="your-google-cloud-bucket-name"
+# Social Media APIs
+TWITTER_API_KEY="your-twitter-api-key"
+TWITTER_API_SECRET="your-twitter-api-secret"
+TWITTER_ACCESS_TOKEN="your-twitter-access-token"
+TWITTER_ACCESS_SECRET="your-twitter-access-secret"
+
+FACEBOOK_APP_ID="your-facebook-app-id"
+FACEBOOK_APP_SECRET="your-facebook-app-secret"
+FACEBOOK_ACCESS_TOKEN="your-facebook-access-token"
+
+INSTAGRAM_ACCESS_TOKEN="your-instagram-access-token"
+
+LINKEDIN_CLIENT_ID="your-linkedin-client-id"
+LINKEDIN_CLIENT_SECRET="your-linkedin-client-secret"
+
+# File Processing
+GOOGLE_CLOUD_STORAGE_BUCKET="your-gcs-bucket-name"
+GOOGLE_APPLICATION_CREDENTIALS="path/to/service-account.json"
 
 # Redis for Rate Limiting
 UPSTASH_REDIS_URL="your-redis-url"
 UPSTASH_REDIS_TOKEN="your-redis-token"
 
-# OCR and Document Processing
-TESSERACT_DATA_PATH="path-to-tesseract-data"
+# Analytics
+GOOGLE_ANALYTICS_ID="your-ga-id"
+MIXPANEL_TOKEN="your-mixpanel-token"
+
+# Monitoring
+SENTRY_DSN="your-sentry-dsn"
+DATADOG_API_KEY="your-datadog-api-key"
 
 # Next.js
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
