--- a/package.json
+++ b/package.json
@@ -9,29 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.x",
-    "react": "18.2.x",
-    "react-dom": "18.2.x",
-    "typescript": "5.0.x",
-    "@headlessui/react": "^1.7.x",
-    "@heroicons/react": "^2.0.x",
-    "@tailwindcss/forms": "^0.5.x",
-    "autoprefixer": "^10.4.x",
-    "tailwindcss": "^3.3.x",
-    "postcss": "^8.4.x",
-    "axios": "^1.3.x",
-    "openai": "^4.x.x",
-    "@prisma/client": "^4.x.x",
-    "next-auth": "^4.x.x",
-    "zod": "^3.x.x"
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/supabase-js": "^2.39.3",
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35"
   },
   "devDependencies": {
-    "@types/node": "^18.x.x",
-    "@types/react": "^18.x.x",
-    "@types/react-dom": "^18.x.x",
-    "eslint": "^8.x.x",
-    "eslint-config-next": "13.4.x",
-    "prisma": "^4.x.x",
-    "typescript": "^5.0.x"
+    "@types/node": "^20.11.16",
+    "@types/react": "^18.2.52",
+    "@types/react-dom": "^18.2.18",
+    "typescript": "^5.3.3",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0"
   }
 }
